--- a/Rosovina/Modules/ProductDetails/Views/ProductDetailsView.xib
+++ b/Rosovina/Modules/ProductDetails/Views/ProductDetailsView.xib
@@ -108,7 +108,7 @@
                     <rect key="frame" x="0.0" y="738" width="393" height="80"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pc6-5T-1qz">
-                            <rect key="frame" x="69" y="17.666666666666629" width="112" height="45"/>
+                            <rect key="frame" x="80" y="17.666666666666629" width="112" height="45"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gcl-nM-G76">
                                     <rect key="frame" x="52" y="11.333333333333371" width="8.3333333333333357" height="22"/>
@@ -181,9 +181,16 @@
                             </constraints>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Phu-Iz-qTi">
-                            <rect key="frame" x="30" y="29" width="19" height="22"/>
+                            <rect key="frame" x="30" y="25" width="30" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="30" id="GtC-wH-pXf"/>
+                                <constraint firstAttribute="height" constant="30" id="s4v-RP-Npy"/>
+                            </constraints>
+                            <color key="tintColor" name="AccentColor"/>
                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                            <state key="normal" image="Frame"/>
+                            <state key="normal" image="heart" catalog="system">
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
+                            </state>
                         </button>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -396,11 +403,11 @@
     <resources>
         <image name="Add" width="31.666666030883789" height="32"/>
         <image name="Ellipse 12" width="4" height="4"/>
-        <image name="Frame" width="19" height="16"/>
         <image name="Minus" width="32" height="32"/>
         <image name="StarBig" width="33" height="30"/>
         <image name="arrow" width="24" height="21.666666030883789"/>
         <image name="cart" width="14.333333015441895" height="15.666666984558105"/>
+        <image name="heart" catalog="system" width="128" height="107"/>
         <namedColor name="AccentColor">
             <color red="0.17599999904632568" green="0.19200000166893005" blue="0.25900000333786011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
