--- a/Rosovina/Modules/ForgetPassword/Views/PhoneNumberView.xib
+++ b/Rosovina/Modules/ForgetPassword/Views/PhoneNumberView.xib
@@ -58,7 +58,7 @@
                                                         <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Type your phone..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="L5p-s2-CyQ">
                                                             <rect key="frame" x="125" y="14.666666666666687" width="220" height="18.666666666666671"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                            <textInputTraits key="textInputTraits" textContentType="tel"/>
+                                                            <textInputTraits key="textInputTraits" keyboardType="phonePad" textContentType="tel"/>
                                                         </textField>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VaC-L8-efx">
                                                             <rect key="frame" x="8" y="8" width="100" height="32"/>
